swagger and fixes
